# OpenCVTrainings

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat
AdditionalCmake/: Macros.cmake  OpenCVCMake.cmake
BP10_Erosion/: CMakeLists.txt
BP11_MorphologicalOperations/: CMakeLists.txt
BP12_HitAndMiss/: CMakeLists.txt
BP13_ImagePyramids/: CMakeLists.txt
BP14_ColorConversion/: CMakeLists.txt
BP15_Colormap/: CMakeLists.txt
BP16_Thresholding/: CMakeLists.txt
BP17_LinearFilter/: CMakeLists.txt
BP18_Kernel/: CMakeLists.txt
BP19_SobelFilter/: CMakeLists.txt
BP1_HelloOpenCV/: CMakeLists.txt
BP20_LaplacianFilter/: CMakeLists.txt
BP21_Canny/: CMakeLists.txt
BP21_Transformations/: CMakeLists.txt
BP22_HoughLines/: CMakeLists.txt
BP23_HoughCircles/: CMakeLists.txt
BP24_HarrisCorner/: CMakeLists.txt
BP25_ShiTomasiCorner/: CMakeLists.txt
BP26_Contours/: CMakeLists.txt
BP27_BoundingContours/: CMakeLists.txt
BP28_ConvexHull/: CMakeLists.txt
BP29_Transformations/: CMakeLists.txt
BP2X_Transformations/: CMakeLists.txt
BP2_ImageReadWrite/: CMakeLists.txt
BP3_ImageMatrix/: CMakeLists.txt  build_windows.bat
BP4_BlendingTwoImages/: CMakeLists.txt  build_linux.sh  build_windows.bat
BP5_BrightnessAdjustment/: CMakeLists.txt  build_windows.bat
BP6_BasicDrawings/: CMakeLists.txt  build_windows.bat
BP7_Text/: CMakeLists.txt
BP8_Blur/: CMakeLists.txt
BP8_Smoothing/: CMakeLists.txt
Cmake/: OpenCVCMake.cmake
HelloOpenCV/: .cproject  CMakeLists.txt  build_linux.sh  build_windows.bat
HelloOpenCV/src/: HelloOpenCV.cpp
(+33 files in other folders)
