cmake_minimum_required(VERSION 3.0)

project( OpenCVTrainings )

add_subdirectory(BP1_HelloOpenCV)

add_subdirectory(BP2_ImageReadWrite)

add_subdirectory(BP3_ImageMatrix)

add_subdirectory(BP4_BlendingTwoImages)

add_subdirectory(BP5_BrightnessAdjustment)

add_subdirectory(BP6_BasicDrawings)

add_subdirectory(BP7_Text)

add_subdirectory(BP8_Blur)

add_subdirectory(BP9_Dilation)

add_subdirectory(BP10_Erosion)

add_subdirectory(BP11_MorphologicalOperations)

add_subdirectory(BP12_HitAndMiss)
